Fix : 테이블 뷰 디자인 변경

--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -51,21 +51,28 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ya5-ZV-i59">
-                        <rect key="frame" x="269.66666666666669" y="27.999999999999996" width="32.333333333333314" height="14.333333333333332"/>
+                        <rect key="frame" x="258.66666666666669" y="27.999999999999996" width="32.333333333333314" height="14.333333333333332"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YUM-lF-2Sh">
-                        <rect key="frame" x="307" y="31" width="8" height="8"/>
+                        <rect key="frame" x="295" y="27" width="16" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="8" id="TwB-yF-fN9"/>
-                            <constraint firstAttribute="width" constant="8" id="rsu-Cx-vwD"/>
+                            <constraint firstAttribute="height" constant="16" id="FmX-a2-bqU"/>
+                            <constraint firstAttribute="width" constant="16" id="LXM-u6-Y2I"/>
                         </constraints>
                         <color key="tintColor" name="maincolor"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
-                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="9"/>
+                        <buttonConfiguration key="configuration" style="filled">
+                            <attributedString key="attributedTitle">
+                                <fragment content="+">
+                                    <attributes>
+                                        <font key="NSFont" size="12" name="Helvetica-Bold"/>
+                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
                         </buttonConfiguration>
                         <connections>
                             <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eTP-kI-ZEy"/>
@@ -92,42 +99,56 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN5-NU-7oT">
-                        <rect key="frame" x="256.66666666666669" y="31" width="8" height="8"/>
+                        <rect key="frame" x="238.66666666666666" y="27" width="16" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="8" id="PpE-bu-XDk"/>
-                            <constraint firstAttribute="height" constant="8" id="cWf-zU-3x7"/>
+                            <constraint firstAttribute="height" constant="16" id="I5E-UX-by3"/>
+                            <constraint firstAttribute="width" secondItem="zN5-NU-7oT" secondAttribute="height" multiplier="1:1" id="io9-pW-duW"/>
+                            <constraint firstAttribute="width" constant="16" id="jIY-Oo-meb"/>
                         </constraints>
                         <color key="tintColor" name="maincolor"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="Button" image="minus" catalog="system">
                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="9"/>
                         </state>
+                        <buttonConfiguration key="configuration" style="filled">
+                            <attributedString key="attributedTitle">
+                                <fragment content="-">
+                                    <attributes>
+                                        <font key="NSFont" size="12" name="Helvetica-Bold"/>
+                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
+                            <color key="baseBackgroundColor" name="maincolor"/>
+                        </buttonConfiguration>
                         <connections>
                             <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dPL-3o-vix"/>
                         </connections>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="YUM-lF-2Sh" firstAttribute="leading" secondItem="Ya5-ZV-i59" secondAttribute="trailing" constant="5" id="4fh-gc-2qo"/>
-                    <constraint firstItem="zN5-NU-7oT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="84y-zD-aPq"/>
+                    <constraint firstItem="zN5-NU-7oT" firstAttribute="centerY" secondItem="Ya5-ZV-i59" secondAttribute="centerY" id="4ce-1r-BGo"/>
+                    <constraint firstItem="Ya5-ZV-i59" firstAttribute="leading" secondItem="zN5-NU-7oT" secondAttribute="trailing" constant="4" id="81l-X5-4L7"/>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="8Rb-V2-aAx" secondAttribute="leading" id="8f8-VU-MNP"/>
                     <constraint firstItem="2Pq-lG-nRq" firstAttribute="leading" secondItem="cJL-Eq-rkq" secondAttribute="trailing" constant="7" id="Dsa-6I-qvr"/>
                     <constraint firstItem="8Rb-V2-aAx" firstAttribute="leading" secondItem="gZu-gT-o9E" secondAttribute="trailing" constant="7" id="KmK-aF-tYe"/>
                     <constraint firstItem="8Rb-V2-aAx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="LjZ-nz-9cH"/>
-                    <constraint firstItem="Ya5-ZV-i59" firstAttribute="leading" secondItem="zN5-NU-7oT" secondAttribute="trailing" constant="5" id="Lmr-ck-P4o"/>
                     <constraint firstAttribute="bottom" secondItem="gZu-gT-o9E" secondAttribute="bottom" constant="5" id="M96-Yd-R46"/>
+                    <constraint firstItem="zN5-NU-7oT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="27" id="NBq-KB-qOf"/>
+                    <constraint firstItem="YUM-lF-2Sh" firstAttribute="top" secondItem="zN5-NU-7oT" secondAttribute="top" id="NeQ-Ym-CdS"/>
                     <constraint firstItem="cJL-Eq-rkq" firstAttribute="leading" secondItem="JyQ-Sc-M0B" secondAttribute="trailing" constant="7" id="OlW-Yg-7HS"/>
                     <constraint firstAttribute="bottom" secondItem="JyQ-Sc-M0B" secondAttribute="bottom" constant="13" id="SpQ-uO-N1p"/>
                     <constraint firstItem="YM1-sR-wnM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="T8n-nH-9oj"/>
+                    <constraint firstItem="YUM-lF-2Sh" firstAttribute="leading" secondItem="Ya5-ZV-i59" secondAttribute="trailing" constant="4" id="Twh-3g-NeI"/>
                     <constraint firstItem="gZu-gT-o9E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="WqD-JA-3ko"/>
+                    <constraint firstAttribute="trailing" secondItem="YUM-lF-2Sh" secondAttribute="trailing" constant="25" id="Wuz-Tn-W1o"/>
                     <constraint firstItem="2Pq-lG-nRq" firstAttribute="centerY" secondItem="cJL-Eq-rkq" secondAttribute="centerY" id="YH3-4f-55b"/>
                     <constraint firstItem="YUM-lF-2Sh" firstAttribute="centerY" secondItem="Ya5-ZV-i59" secondAttribute="centerY" id="Zil-TK-VYc"/>
                     <constraint firstItem="gZu-gT-o9E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="a42-Tu-J9N"/>
-                    <constraint firstItem="Ya5-ZV-i59" firstAttribute="centerY" secondItem="zN5-NU-7oT" secondAttribute="centerY" id="lXe-Ge-lfT"/>
+                    <constraint firstItem="Ya5-ZV-i59" firstAttribute="centerY" secondItem="gZu-gT-o9E" secondAttribute="centerY" id="kIm-BZ-bke"/>
                     <constraint firstAttribute="trailing" secondItem="YM1-sR-wnM" secondAttribute="trailing" constant="2" id="lfy-V6-NeR"/>
                     <constraint firstItem="cJL-Eq-rkq" firstAttribute="centerY" secondItem="JyQ-Sc-M0B" secondAttribute="centerY" id="mmD-nv-Qr3"/>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="gZu-gT-o9E" secondAttribute="trailing" constant="7" id="oNZ-ZP-wMN"/>
-                    <constraint firstAttribute="trailing" secondItem="YUM-lF-2Sh" secondAttribute="trailing" constant="21" id="sSg-aC-MRo"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -143,7 +164,6 @@
     </objects>
     <resources>
         <image name="minus" catalog="system" width="128" height="26"/>
-        <image name="plus" catalog="system" width="128" height="113"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="maincolor">
             <color red="0.0" green="0.6588235294117647" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
