--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -79,20 +78,23 @@
                         </connections>
                     </button>
                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YM1-sR-wnM">
-                        <rect key="frame" x="321" y="2" width="13" height="13"/>
+                        <rect key="frame" x="318" y="2" width="16" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="13" id="6fd-TZ-1aa"/>
-                            <constraint firstAttribute="width" constant="13" id="Flk-rb-rDK"/>
+                            <constraint firstAttribute="height" constant="16" id="6fd-TZ-1aa"/>
+                            <constraint firstAttribute="width" constant="16" id="Flk-rb-rDK"/>
                             <constraint firstAttribute="width" secondItem="YM1-sR-wnM" secondAttribute="height" multiplier="1:1" id="JfC-Um-eE7"/>
                         </constraints>
-                        <color key="tintColor" systemColor="secondarySystemBackgroundColor"/>
+                        <color key="tintColor" name="maincolor"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain">
-                            <imageReference key="image" image="xmark" catalog="system" symbolScale="small"/>
-                            <backgroundConfiguration key="background">
-                                <color key="backgroundColor" name="maincolor"/>
-                            </backgroundConfiguration>
-                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="8"/>
+                            <attributedString key="attributedTitle">
+                                <fragment content="X">
+                                    <attributes>
+                                        <font key="NSFont" size="10" name="Helvetica-Bold"/>
+                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
                         </buttonConfiguration>
                         <connections>
                             <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2Hf-um-UMq"/>
@@ -164,13 +166,9 @@
     </objects>
     <resources>
         <image name="minus" catalog="system" width="128" height="26"/>
-        <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="maincolor">
             <color red="0.0" green="0.6588235294117647" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
