--- a/BlueBucksKiosk/View/CartStoryboard.storyboard
+++ b/BlueBucksKiosk/View/CartStoryboard.storyboard
@@ -44,30 +44,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주문 개수 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2UX-jM-wRr">
-                                <rect key="frame" x="16" y="59" width="77" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="주문 개수 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2UX-jM-wRr">
+                                <rect key="frame" x="16" y="65" width="77" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OrQ-K9-TjF">
-                                <rect key="frame" x="101" y="59" width="10" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OrQ-K9-TjF">
+                                <rect key="frame" x="101" y="65" width="10" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jt8-wB-CGK">
-                                <rect key="frame" x="16" y="88" width="361" height="264"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jt8-wB-CGK">
+                                <rect key="frame" x="16" y="100" width="361" height="264"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27q-kc-ien">
-                                        <rect key="frame" x="8" y="54" width="345" height="200"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </tableView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qdz-CQ-yeg">
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qdz-CQ-yeg">
                                         <rect key="frame" x="298" y="0.0" width="55" height="55"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="55" id="e3F-El-YrI"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="xmark.bin" catalog="system"/>
@@ -75,40 +72,28 @@
                                             <action selector="allClearBtnPressed:" destination="GX7-AV-gkc" eventType="touchUpInside" id="2fr-8H-f2h"/>
                                         </connections>
                                     </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27q-kc-ien">
+                                        <rect key="frame" x="8" y="51" width="345" height="205"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.87058823529411766" green="0.95686274509803915" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Qdz-CQ-yeg" secondAttribute="trailing" constant="8" id="2qd-zI-p3z"/>
-                                    <constraint firstAttribute="height" constant="264" id="402-xa-7yE"/>
-                                    <constraint firstItem="Qdz-CQ-yeg" firstAttribute="top" secondItem="jt8-wB-CGK" secondAttribute="top" id="EzT-oA-kPD"/>
-                                    <constraint firstItem="27q-kc-ien" firstAttribute="leading" secondItem="jt8-wB-CGK" secondAttribute="leading" constant="8" id="Q1C-dg-8mr"/>
-                                    <constraint firstAttribute="trailing" secondItem="27q-kc-ien" secondAttribute="trailing" constant="8" id="Yny-S1-14E"/>
-                                    <constraint firstItem="27q-kc-ien" firstAttribute="trailing" secondItem="Qdz-CQ-yeg" secondAttribute="trailing" id="dri-2w-2wM"/>
-                                    <constraint firstAttribute="bottom" secondItem="27q-kc-ien" secondAttribute="bottom" constant="10" id="tgC-gZ-NgB"/>
-                                    <constraint firstItem="27q-kc-ien" firstAttribute="top" secondItem="jt8-wB-CGK" secondAttribute="top" constant="54" id="wEn-ev-gar"/>
-                                </constraints>
+                                <color key="backgroundColor" red="0.58823529411764708" green="0.85882352941176465" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isRadius" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="총 주문가격 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxk-Z8-t9f">
-                                <rect key="frame" x="236" y="59" width="92" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFC-3d-puO">
+                                <rect key="frame" x="336" y="65" width="41" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFC-3d-puO">
-                                <rect key="frame" x="336" y="59" width="41" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwo-0u-SxL">
-                                <rect key="frame" x="16" y="360" width="361" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwo-0u-SxL">
+                                <rect key="frame" x="16" y="372" width="361" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="Zci-Dj-H0G"/>
-                                </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="결제하기"/>
@@ -116,25 +101,16 @@
                                     <action selector="purchaseBtnPressed:" destination="GX7-AV-gkc" eventType="touchUpInside" id="Exc-eg-Hnx"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="총 주문가격 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxk-Z8-t9f">
+                                <rect key="frame" x="236" y="65" width="92" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5eZ-I3-d4t"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="2UX-jM-wRr" firstAttribute="top" secondItem="5eZ-I3-d4t" secondAttribute="top" id="0Jb-KC-Rig"/>
-                            <constraint firstItem="5eZ-I3-d4t" firstAttribute="trailing" secondItem="cwo-0u-SxL" secondAttribute="trailing" constant="16" id="1rr-2J-ax9"/>
-                            <constraint firstItem="cwo-0u-SxL" firstAttribute="leading" secondItem="5eZ-I3-d4t" secondAttribute="leading" constant="16" id="6PK-bA-1bV"/>
-                            <constraint firstItem="OrQ-K9-TjF" firstAttribute="leading" secondItem="2UX-jM-wRr" secondAttribute="trailing" constant="8" id="7Pc-jV-OBv"/>
-                            <constraint firstItem="OrQ-K9-TjF" firstAttribute="top" secondItem="5eZ-I3-d4t" secondAttribute="top" id="A4d-xL-agp"/>
-                            <constraint firstItem="dxk-Z8-t9f" firstAttribute="top" secondItem="5eZ-I3-d4t" secondAttribute="top" id="F1H-D7-eEa"/>
-                            <constraint firstItem="2UX-jM-wRr" firstAttribute="leading" secondItem="5eZ-I3-d4t" secondAttribute="leading" constant="16" id="PxZ-1R-WnY"/>
-                            <constraint firstItem="5eZ-I3-d4t" firstAttribute="trailing" secondItem="XFC-3d-puO" secondAttribute="trailing" constant="16" id="SYi-tp-qmr"/>
-                            <constraint firstItem="XFC-3d-puO" firstAttribute="top" secondItem="5eZ-I3-d4t" secondAttribute="top" id="XWi-e8-gmh"/>
-                            <constraint firstItem="jt8-wB-CGK" firstAttribute="top" secondItem="i1x-Zz-ccb" secondAttribute="topMargin" constant="29" id="YZc-jw-YfJ"/>
-                            <constraint firstItem="cwo-0u-SxL" firstAttribute="top" secondItem="jt8-wB-CGK" secondAttribute="bottom" constant="8" id="ab4-QG-4Za"/>
-                            <constraint firstItem="jt8-wB-CGK" firstAttribute="leading" secondItem="5eZ-I3-d4t" secondAttribute="leading" constant="16" id="gZ1-VP-Wmp"/>
-                            <constraint firstItem="5eZ-I3-d4t" firstAttribute="trailing" secondItem="jt8-wB-CGK" secondAttribute="trailing" constant="16" id="uKb-bZ-uFW"/>
-                            <constraint firstItem="XFC-3d-puO" firstAttribute="leading" secondItem="dxk-Z8-t9f" secondAttribute="trailing" constant="8" id="xeH-g8-vpy"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="cartTableView" destination="27q-kc-ien" id="7FG-Vj-g6z"/>
