--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -49,34 +49,6 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ya5-ZV-i59">
-                        <rect key="frame" x="258.66666666666669" y="27.999999999999996" width="32.333333333333314" height="14.333333333333332"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YUM-lF-2Sh">
-                        <rect key="frame" x="295" y="27" width="16" height="16"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="16" id="FmX-a2-bqU"/>
-                            <constraint firstAttribute="width" constant="16" id="LXM-u6-Y2I"/>
-                        </constraints>
-                        <color key="tintColor" name="maincolor"/>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="filled">
-                            <attributedString key="attributedTitle">
-                                <fragment content="+">
-                                    <attributes>
-                                        <font key="NSFont" size="12" name="Helvetica-Bold"/>
-                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                    </attributes>
-                                </fragment>
-                            </attributedString>
-                        </buttonConfiguration>
-                        <connections>
-                            <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eTP-kI-ZEy"/>
-                        </connections>
-                    </button>
                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YM1-sR-wnM">
                         <rect key="frame" x="318" y="2" width="16" height="16"/>
                         <constraints>
@@ -100,61 +72,112 @@
                             <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2Hf-um-UMq"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN5-NU-7oT">
-                        <rect key="frame" x="238.66666666666666" y="27" width="16" height="16"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qYB-On-XTx" userLabel="CountView">
+                        <rect key="frame" x="236" y="27" width="75" height="16"/>
+                        <subviews>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YUM-lF-2Sh">
+                                <rect key="frame" x="59" y="0.0" width="16" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="FmX-a2-bqU"/>
+                                    <constraint firstAttribute="width" constant="16" id="LXM-u6-Y2I"/>
+                                </constraints>
+                                <color key="tintColor" name="maincolor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="+">
+                                            <attributes>
+                                                <font key="NSFont" size="12" name="Helvetica-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eTP-kI-ZEy"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN5-NU-7oT">
+                                <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="I5E-UX-by3"/>
+                                    <constraint firstAttribute="width" secondItem="zN5-NU-7oT" secondAttribute="height" multiplier="1:1" id="io9-pW-duW"/>
+                                    <constraint firstAttribute="width" constant="16" id="jIY-Oo-meb"/>
+                                </constraints>
+                                <color key="tintColor" name="maincolor"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="minus" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="9"/>
+                                </state>
+                                <buttonConfiguration key="configuration" style="filled">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="-">
+                                            <attributes>
+                                                <font key="NSFont" size="12" name="Helvetica-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseBackgroundColor" name="maincolor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dPL-3o-vix"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ya5-ZV-i59">
+                                <rect key="frame" x="16" y="1.0000000000000009" width="43" height="14.333333333333336"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="43" id="wQN-S2-kLp"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="0">
+                                        <attributes>
+                                            <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <font key="NSFont" metaFont="cellTitle"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="maincolor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="16" id="I5E-UX-by3"/>
-                            <constraint firstAttribute="width" secondItem="zN5-NU-7oT" secondAttribute="height" multiplier="1:1" id="io9-pW-duW"/>
-                            <constraint firstAttribute="width" constant="16" id="jIY-Oo-meb"/>
+                            <constraint firstItem="YUM-lF-2Sh" firstAttribute="top" secondItem="qYB-On-XTx" secondAttribute="top" id="9yk-9u-gOy"/>
+                            <constraint firstAttribute="bottom" secondItem="zN5-NU-7oT" secondAttribute="bottom" id="A0f-iA-86A"/>
+                            <constraint firstItem="Ya5-ZV-i59" firstAttribute="centerX" secondItem="qYB-On-XTx" secondAttribute="centerX" id="Ga2-3j-pTw"/>
+                            <constraint firstItem="Ya5-ZV-i59" firstAttribute="leading" secondItem="zN5-NU-7oT" secondAttribute="trailing" id="LnS-gS-rX5"/>
+                            <constraint firstItem="Ya5-ZV-i59" firstAttribute="centerY" secondItem="qYB-On-XTx" secondAttribute="centerY" id="OBs-3q-VEV"/>
+                            <constraint firstItem="YUM-lF-2Sh" firstAttribute="leading" secondItem="Ya5-ZV-i59" secondAttribute="trailing" id="OGo-eR-VJo"/>
+                            <constraint firstItem="zN5-NU-7oT" firstAttribute="top" secondItem="qYB-On-XTx" secondAttribute="top" id="Qw4-r1-f0w"/>
+                            <constraint firstAttribute="trailing" secondItem="YUM-lF-2Sh" secondAttribute="trailing" id="bN9-Hh-rA7"/>
+                            <constraint firstItem="zN5-NU-7oT" firstAttribute="leading" secondItem="qYB-On-XTx" secondAttribute="leading" id="jpU-wx-dkG"/>
+                            <constraint firstAttribute="bottom" secondItem="YUM-lF-2Sh" secondAttribute="bottom" id="utH-JU-DJf"/>
                         </constraints>
-                        <color key="tintColor" name="maincolor"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="Button" image="minus" catalog="system">
-                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="9"/>
-                        </state>
-                        <buttonConfiguration key="configuration" style="filled">
-                            <attributedString key="attributedTitle">
-                                <fragment content="-">
-                                    <attributes>
-                                        <font key="NSFont" size="12" name="Helvetica-Bold"/>
-                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                    </attributes>
-                                </fragment>
-                            </attributedString>
-                            <color key="baseBackgroundColor" name="maincolor"/>
-                        </buttonConfiguration>
-                        <connections>
-                            <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dPL-3o-vix"/>
-                        </connections>
-                    </button>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="zN5-NU-7oT" firstAttribute="centerY" secondItem="Ya5-ZV-i59" secondAttribute="centerY" id="4ce-1r-BGo"/>
-                    <constraint firstItem="Ya5-ZV-i59" firstAttribute="leading" secondItem="zN5-NU-7oT" secondAttribute="trailing" constant="4" id="81l-X5-4L7"/>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="8Rb-V2-aAx" secondAttribute="leading" id="8f8-VU-MNP"/>
                     <constraint firstItem="2Pq-lG-nRq" firstAttribute="leading" secondItem="cJL-Eq-rkq" secondAttribute="trailing" constant="7" id="Dsa-6I-qvr"/>
                     <constraint firstItem="8Rb-V2-aAx" firstAttribute="leading" secondItem="gZu-gT-o9E" secondAttribute="trailing" constant="7" id="KmK-aF-tYe"/>
                     <constraint firstItem="8Rb-V2-aAx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="LjZ-nz-9cH"/>
                     <constraint firstAttribute="bottom" secondItem="gZu-gT-o9E" secondAttribute="bottom" constant="5" id="M96-Yd-R46"/>
-                    <constraint firstItem="zN5-NU-7oT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="27" id="NBq-KB-qOf"/>
-                    <constraint firstItem="YUM-lF-2Sh" firstAttribute="top" secondItem="zN5-NU-7oT" secondAttribute="top" id="NeQ-Ym-CdS"/>
                     <constraint firstItem="cJL-Eq-rkq" firstAttribute="leading" secondItem="JyQ-Sc-M0B" secondAttribute="trailing" constant="7" id="OlW-Yg-7HS"/>
                     <constraint firstAttribute="bottom" secondItem="JyQ-Sc-M0B" secondAttribute="bottom" constant="13" id="SpQ-uO-N1p"/>
                     <constraint firstItem="YM1-sR-wnM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="T8n-nH-9oj"/>
-                    <constraint firstItem="YUM-lF-2Sh" firstAttribute="leading" secondItem="Ya5-ZV-i59" secondAttribute="trailing" constant="4" id="Twh-3g-NeI"/>
                     <constraint firstItem="gZu-gT-o9E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="WqD-JA-3ko"/>
-                    <constraint firstAttribute="trailing" secondItem="YUM-lF-2Sh" secondAttribute="trailing" constant="25" id="Wuz-Tn-W1o"/>
                     <constraint firstItem="2Pq-lG-nRq" firstAttribute="centerY" secondItem="cJL-Eq-rkq" secondAttribute="centerY" id="YH3-4f-55b"/>
-                    <constraint firstItem="YUM-lF-2Sh" firstAttribute="centerY" secondItem="Ya5-ZV-i59" secondAttribute="centerY" id="Zil-TK-VYc"/>
                     <constraint firstItem="gZu-gT-o9E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="a42-Tu-J9N"/>
-                    <constraint firstItem="Ya5-ZV-i59" firstAttribute="centerY" secondItem="gZu-gT-o9E" secondAttribute="centerY" id="kIm-BZ-bke"/>
                     <constraint firstAttribute="trailing" secondItem="YM1-sR-wnM" secondAttribute="trailing" constant="2" id="lfy-V6-NeR"/>
                     <constraint firstItem="cJL-Eq-rkq" firstAttribute="centerY" secondItem="JyQ-Sc-M0B" secondAttribute="centerY" id="mmD-nv-Qr3"/>
+                    <constraint firstAttribute="trailing" secondItem="qYB-On-XTx" secondAttribute="trailing" constant="25" id="o6o-Lj-Pjd"/>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="gZu-gT-o9E" secondAttribute="trailing" constant="7" id="oNZ-ZP-wMN"/>
+                    <constraint firstItem="qYB-On-XTx" firstAttribute="centerY" secondItem="gZu-gT-o9E" secondAttribute="centerY" id="v1v-6i-cQY"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="CountView" destination="qYB-On-XTx" id="YbS-I3-bi9"/>
                 <outlet property="cellCount" destination="Ya5-ZV-i59" id="Kpv-xH-A7d"/>
                 <outlet property="cellImage" destination="gZu-gT-o9E" id="esA-Zh-kbE"/>
                 <outlet property="name" destination="8Rb-V2-aAx" id="tsi-Zy-ls6"/>
@@ -170,7 +193,7 @@
             <color red="0.0" green="0.6588235294117647" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
