--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -156,6 +156,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="8Rb-V2-aAx" secondAttribute="leading" id="8f8-VU-MNP"/>
                     <constraint firstItem="2Pq-lG-nRq" firstAttribute="leading" secondItem="cJL-Eq-rkq" secondAttribute="trailing" constant="7" id="Dsa-6I-qvr"/>
