Add: 테이블 뷰 셀 라운드 추가

--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -178,9 +178,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="CountView" destination="qYB-On-XTx" id="YbS-I3-bi9"/>
                 <outlet property="cellCount" destination="Ya5-ZV-i59" id="Kpv-xH-A7d"/>
                 <outlet property="cellImage" destination="gZu-gT-o9E" id="esA-Zh-kbE"/>
+                <outlet property="contentView" destination="H2p-sc-9uM" id="37n-WI-kfy"/>
+                <outlet property="countView" destination="qYB-On-XTx" id="aii-aH-Hlx"/>
                 <outlet property="name" destination="8Rb-V2-aAx" id="tsi-Zy-ls6"/>
                 <outlet property="price" destination="JyQ-Sc-M0B" id="ozc-zw-TKY"/>
                 <outlet property="size" destination="2Pq-lG-nRq" id="s8w-7T-F81"/>
